--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
 </head>
   <body class="bg-slate-950 text-white antialiased selection:bg-indigo-500 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
