--- a/index.html
+++ b/index.html
@@ -3,44 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Product Interviewer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', 'Noto Sans SC', sans-serif;
-        margin: 0;
-        padding: 0;
-        overflow-x: hidden;
-      }
-      /* Custom Animations for floating particles */
-      @keyframes float {
-        0% { transform: translateY(0px) translateX(0px); opacity: 0.4; }
-        50% { transform: translateY(-20px) translateX(10px); opacity: 0.8; }
-        100% { transform: translateY(0px) translateX(0px); opacity: 0.4; }
-      }
-      .animate-float-slow {
-        animation: float 8s ease-in-out infinite;
-      }
-      .animate-float-medium {
-        animation: float 6s ease-in-out infinite reverse;
-      }
-      .animate-float-fast {
-        animation: float 4s ease-in-out infinite;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
-  }
-}
-</script>
-</head>
-  <body class="bg-slate-950 text-white antialiased selection:bg-indigo-500 selection:text-white">
+    <title>我的个人学习向作品：AI产品面试官</title>
+  </head>
+  <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script> 
   </body>
 </html>
